hid tthe overflow in x of the body to try and fix scolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ a {
   font-weight: bold;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .body {
   background-color: rgb(245, 245, 245);
   opacity: 1;
